--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,16 @@
-
+{
+  "manifest_version": 3,
+  "name": "Twitch Chat Translator",
+  "version": "1.0",
+  "description": "Translate messages in Twitch chat to English.",
+  "permissions": ["activeTab", "scripting","storage"],
+  "action": {
+    "default_popup": "popup.html"
+  },
+  "content_scripts": [
+    {
+      "matches": ["*://*.twitch.tv/*"],
+      "js": ["ext.js"]
+    }
+  ]
+}
