--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,12 @@
 {
   "manifest_version": 3,
-  "name": "Twitch Chat Translator",
+  "name": "Chat Modifier",
   "version": "1.0",
-  "description": "Translate messages in Twitch chat to English.",
-  "permissions": ["activeTab", "scripting","storage"],
-  "action": {
-    "default_popup": "popup.html"
-  },
+  "description": "Automatically modifies specific chat elements on the page.",
+  "permissions": ["scripting"],
   "content_scripts": [
     {
-      "matches": ["*://*.twitch.tv/*"],
+      "matches": ["*://*.twitch.tv/*"], 
       "js": ["ext.js"]
     }
   ]
